src/objects/NokiaCPQ_CSP_ordering_export_mapping__c.object
<CustomObject>
    <fields>
        <fullName>PCI_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCI Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PCI Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Type__c</fullName>
        <label>PCI Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service PCI</fullName>
                </value>
                <value>
                    <fullName>Equipment PCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PName1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PName1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PName2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PName3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PName3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PValue2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PValue2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PValue3__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PValue3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Parent Product</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pvalue1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pvalue1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule</label>
        <length>131071</length>
        <type>LongTextArea</type>
    </fields>
    <label>CSP export mapping</label>
    <listViews>
        <fullName>All_records</fullName>
        <columns>NAME</columns>
        <columns>Parent_Product__c</columns>
        <columns>PCI_Code__c</columns>
        <columns>PCI_Description__c</columns>
        <columns>PCI_Type__c</columns>
        <columns>PName1__c</columns>
        <columns>Pvalue1__c</columns>
        <columns>Rule__c</columns>
        <columns>Rule_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSP-{0000}</displayFormat>
        <label>CPQ ordering export mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSP export mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>